Fixes all internal permalinks

--- a/_posts/2009-06-12-aan-de-ns.html
+++ b/_posts/2009-06-12-aan-de-ns.html
@@ -27,4 +27,4 @@ Geachte mevrouw, geachte heer,</p>
 In opperste waardering,</p>
 <p>ir. T.J. Ouwens</p>
 <p><br>&nbsp;<br><br />
-Reactie van [permalink href="27"]de NS[/permalink].</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2009-06-14-van-de-ns %}">de NS</a>.</p>
