--- a/_posts/2009-06-14-van-de-ns.html
+++ b/_posts/2009-06-14-van-de-ns.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="19"]de NS[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2009-06-12-aan-de-ns %}">de NS</a></p>
 <blockquote><p>
 14 oktober 2005<br />
 <br>&nbsp;<br><br />
