--- a/_posts/2009-07-03-aan-de-taaladviesdienst.html
+++ b/_posts/2009-07-03-aan-de-taaladviesdienst.html
@@ -57,4 +57,4 @@ Jan Ouwens</p>
 <p><br>&nbsp;<br><br>&nbsp;<br><br>&nbsp;<br><br />
 <em>Edit: ergens had ik "brandwoord" geschreven in plaats van "brandwond". Freudiaanse verspreking?</em><br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="69"]de Taaladviesdienst[/permalink].</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2009-07-14-van-de-taaladviesdienst %}">de Taaladviesdienst</a>.</p>
