--- a/_posts/2009-07-14-van-de-taaladviesdienst.html
+++ b/_posts/2009-07-14-van-de-taaladviesdienst.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="58"]de Taaladviesdienst[/permalink].</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2009-07-03-aan-de-taaladviesdienst %}">de Taaladviesdienst</a>.</p>
 <blockquote><p>
 Geachte heer Ouwens,<br />
 <br><br />
