--- a/_posts/2009-07-17-aan-de-heineken-music-hall.html
+++ b/_posts/2009-07-17-aan-de-heineken-music-hall.html
@@ -33,4 +33,4 @@ Hoogachtend,</p>
 P.S.<br />
 Ik heb mij de door mijzelf meegenomen zak M&amp;M's uitstekend laten smaken tijdens het concert!<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="94"]de Heineken Music Hall[/permalink].</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2009-07-26-van-de-heineken-music-hall %}">de Heineken Music Hall</a>.</p>
