--- a/_posts/2009-07-26-van-de-heineken-music-hall.html
+++ b/_posts/2009-07-26-van-de-heineken-music-hall.html
@@ -23,7 +23,7 @@ comments:
   date_gmt: '2009-07-30 17:26:03 +0200'
   content: Zes heerlijk vers getapte colaatjes?
 ---
-<p>Reactie van [permalink href="80"]de Heineken Music Hall[/permalink].<br />
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2009-07-17-aan-de-heineken-music-hall %}">de Heineken Music Hall</a>.<br />
 &nbsp;<br><br />
 Referentie: EB/853.09<br />
 Datum: 22 juli 2009<br />
