--- a/_posts/2009-08-09-van-perfetti-van-melle.html
+++ b/_posts/2009-08-09-van-perfetti-van-melle.html
@@ -23,7 +23,7 @@ comments:
   date_gmt: '2009-08-10 08:31:11 +0200'
   content: "Lol! Standaardreply!\r\n\r\nValt me tegen van Perfetti van Melle (?)"
 ---
-<p>Reactie van [permalink href="100"]Klene[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2009-07-31-aan-klene %}">Klene</a></p>
 <blockquote><p>
 Breda, 5 augustus 2009<br />
 <br>&nbsp;<br><br />
