--- a/_posts/2009-09-11-aan-ca.html
+++ b/_posts/2009-09-11-aan-ca.html
@@ -47,4 +47,4 @@ Geachte mevrouw, geachte heer,</p>
 Hoogachtend,</p>
 <p>Jan Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="124"]C&amp;A[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2009-09-16-van-ca %}">C&amp;A</a></p>
