--- a/_posts/2009-09-16-van-ca.html
+++ b/_posts/2009-09-16-van-ca.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="121"]C&amp;A[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2009-09-11-aan-ca %}">C&amp;A</a></p>
 <blockquote><p>
 Betreft: antwoord op uw sollicitatie<br />
 <br>&nbsp;<br><br />
