--- a/_posts/2009-09-25-aan-onze-taal-rubriek-taalergernissen.html
+++ b/_posts/2009-09-25-aan-onze-taal-rubriek-taalergernissen.html
@@ -31,4 +31,4 @@ comments:
 <p>Oftewel: "By you". En mijn talenknobbel barstte. Engels!? (En waar is de x heen?)</p>
 <p>Het is nog maar één beklemmend korte stap verwijderd van een gebiedende wijs: "buy, you!"<br />
 <br>&nbsp;<br><br>&nbsp;<br><br />
-[permalink href="249"]Geplaatst[/permalink] in Onze Taal!</p>
+<a href="{{ site.baseurl }}{% post_url 2010-02-24-in-onze-taal-rubriek-taalergernissen %}">Geplaatst</a> in Onze Taal!</p>
