--- a/_posts/2009-12-26-aan-quorn.html
+++ b/_posts/2009-12-26-aan-quorn.html
@@ -35,4 +35,4 @@ comments:
 Met vriendelijke groet,<br />
 ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="225"]Quorn[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-01-20-van-quorn %}">Quorn</a></p>
