--- a/_posts/2010-02-06-aan-de-chief-technical-officer-van-kpn.html
+++ b/_posts/2010-02-06-aan-de-chief-technical-officer-van-kpn.html
@@ -51,4 +51,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,</p>
 <p>ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van De <del>Chief Technical Officer</del>[permalink href="280"]Ideeënmanager van KPN[/permalink]</p>
+Reactie van De <del>Chief Technical Officer</del><a href="{{ site.baseurl }}{% post_url 2010-03-25-van-de-ideeenmanager-van-kpn %}">Ideeënmanager van KPN</a></p>
