--- a/_posts/2010-02-22-aan-e-matching-nl.html
+++ b/_posts/2010-02-22-aan-e-matching-nl.html
@@ -41,3 +41,5 @@ comments:
 Ralf Pisters</p>
 <p><br>&nbsp;<br></p>
 <p>PS: U heeft vast al opgemerkt dat zowel volgens de specifieke als de algemene McKean-wet ook deze tekst een taalfout zou moeten bevatten. Voor de zekerheid heb ik er maar direct twee in gestopt.</p>
+<br>&nbsp;<br><br />
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-03-24-van-e-matching-nl %}">e-matching.nl</a></p>
