--- a/_posts/2010-03-25-van-de-ideeenmanager-van-kpn.html
+++ b/_posts/2010-03-25-van-de-ideeenmanager-van-kpn.html
@@ -46,7 +46,7 @@ comments:
     enveloppen moeten vormgeven/bestellen/afdrukken. Zouden ze op al hun uitgaande
     post 'KPN Ideeënmanagement' handmatig schrijven?
 ---
-<p>Reactie van De <del>Chief Technical Officer</del>[permalink href="240"]Ideeënmanager van KPN[/permalink]</p>
+<p>Reactie van De <del>Chief Technical Officer</del><a href="{{ site.baseurl }}{% post_url 2010-02-06-aan-de-chief-technical-officer-van-kpn %}">Ideeënmanager van KPN</a></p>
 <blockquote><p>
 Geachte heer Ouwens,<br />
 <br><br />
