--- a/_posts/2010-03-29-aan-jan-hamming-wethouder-ruimtelijke-ordening-te-tilburg.html
+++ b/_posts/2010-03-29-aan-jan-hamming-wethouder-ruimtelijke-ordening-te-tilburg.html
@@ -65,4 +65,4 @@ Geachte heer Hamming,</p>
 Met vriendelijke groet,<br />
 ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="298"]de gemeente Tilburg[/permalink].</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-04-14-van-de-gemeente-tilburg %}">de gemeente Tilburg</a>.</p>
