--- a/_posts/2010-04-14-van-de-gemeente-tilburg.html
+++ b/_posts/2010-04-14-van-de-gemeente-tilburg.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="294"]de gemeente Tilburg[/permalink].</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2010-03-29-aan-jan-hamming-wethouder-ruimtelijke-ordening-te-tilburg %}">de gemeente Tilburg</a>.</p>
 <blockquote><p>
 Datum: 6 april 2010<br />
 <br><br />
