--- a/_posts/2010-07-10-aan-hasbro-bv.html
+++ b/_posts/2010-07-10-aan-hasbro-bv.html
@@ -55,4 +55,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,<br />
 ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="324"]Hasbro BV[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-07-18-van-hasbro-bv %}">Hasbro BV</a></p>
