--- a/_posts/2010-07-25-aan-subway-franchise-advertising-fund-trust-b-v.html
+++ b/_posts/2010-07-25-aan-subway-franchise-advertising-fund-trust-b-v.html
@@ -30,4 +30,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,<br />
 ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="352"]Subway International BV[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-07-29-van-subway-international-bv %}">Subway International BV</a></p>
