--- a/_posts/2010-07-28-van-hasbro-inc.html
+++ b/_posts/2010-07-28-van-hasbro-inc.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="324"]Hasbro, Inc[/permalink].</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2010-07-18-van-hasbro-bv %}">Hasbro, Inc</a>.</p>
 <blockquote><p>
 July 21, 2010<br />
 <br>&nbsp;<br><br />
