--- a/_posts/2010-07-29-van-subway-international-bv.html
+++ b/_posts/2010-07-29-van-subway-international-bv.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="340"]Subway Franchise Advertising Fund Trust B.V.[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2010-07-25-aan-subway-franchise-advertising-fund-trust-b-v %}">Subway Franchise Advertising Fund Trust B.V.</a></p>
 <blockquote><p>
 Amsterdam, 28 juli 2010<br />
 <br><br />
