--- a/_posts/2010-08-14-aan-de-ret-rotterdamse-elektrische-tram.html
+++ b/_posts/2010-08-14-aan-de-ret-rotterdamse-elektrische-tram.html
@@ -27,4 +27,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,<br />
 ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="384"]de RET[/permalink].</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-08-19-van-de-ret-rotterdamse-elektrische-tram %}">de RET</a>.</p>
