--- a/_posts/2010-08-19-van-de-ret-rotterdamse-elektrische-tram.html
+++ b/_posts/2010-08-19-van-de-ret-rotterdamse-elektrische-tram.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="378"]de RET[/permalink].</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2010-08-14-aan-de-ret-rotterdamse-elektrische-tram %}">de RET</a>.</p>
 <blockquote><p>
 Geachte heer Ouwens,</p>
 <p>Hartelijk dank voor uw reactie, graag reageren wij hierop.</p>
