--- a/_posts/2010-08-29-aan-albert-heijn.html
+++ b/_posts/2010-08-29-aan-albert-heijn.html
@@ -65,4 +65,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,</p>
 <p>ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="412"]Albert Heijn[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-09-15-van-albert-heijn %}">Albert Heijn</a></p>
