--- a/_posts/2010-09-15-van-albert-heijn.html
+++ b/_posts/2010-09-15-van-albert-heijn.html
@@ -30,7 +30,7 @@ comments:
   content: AH geeft duidelijk te kennen dat hun verantwoordelijkheidsgevoel reikt
     tot aan de grenzen van de wet en geen centimeter verder.
 ---
-<p>Reactie van [permalink href="393"]Albert Heijn[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2010-08-29-aan-albert-heijn %}">Albert Heijn</a></p>
 <blockquote><p>
 13 september 2010</p>
 <p>Betreft: privacy Bonuskaarthouders<br />
