--- a/_posts/2010-09-28-ingezonden-brief-aan-tnt-post.html
+++ b/_posts/2010-09-28-ingezonden-brief-aan-tnt-post.html
@@ -60,4 +60,4 @@ comments:
 <p>Met vriendelijke groet,</p>
 <p>Dieuwertje de Backer<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="449"]TNT Post[/permalink].</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-10-11-ingezonden-brief-van-tnt-post %}">TNT Post</a>.</p>
