--- a/_posts/2010-10-03-aan-kraft-foods-nederland-bv.html
+++ b/_posts/2010-10-03-aan-kraft-foods-nederland-bv.html
@@ -50,4 +50,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,</p>
 <p>ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="481"]Kraft Foods Nederland BV[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2010-10-24-van-kraft-foods-nederland-bv %}">Kraft Foods Nederland BV</a></p>
