--- a/_posts/2010-10-10-aan-de-amsterdamse-kraakbeweging-en-het-nederlandsmarokkaans-netwerk-tegen-racisme-voor-sociale-cohesie.html
+++ b/_posts/2010-10-10-aan-de-amsterdamse-kraakbeweging-en-het-nederlandsmarokkaans-netwerk-tegen-racisme-voor-sociale-cohesie.html
@@ -55,5 +55,4 @@ comments:
 Ralf Pisters</p>
 <p><br>&nbsp;<br></p>
 <p><em>zie ook:</em> <a href="http://img.mobypicture.com/c9825bac86a543661289986ca4877815_view.jpg">http://img.mobypicture.com/c9825bac86a543661289986ca4877815_view.jpg</a><br />
-<em>en:</em><br />
-<a href="http://media.nu.nl/m/m1azrceaena0_700.jpg">http://media.nu.nl/m/m1azrceaena0_700.jpg</a></p>
+<em>en:</em> <a href="http://media.nu.nl/m/m1azrceaena0_700.jpg">http://media.nu.nl/m/m1azrceaena0_700.jpg</a></p>
