--- a/_posts/2010-10-24-van-kraft-foods-nederland-bv.html
+++ b/_posts/2010-10-24-van-kraft-foods-nederland-bv.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="433"]Kraft Foods Nederland BV[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2010-10-03-aan-kraft-foods-nederland-bv %}">Kraft Foods Nederland BV</a></p>
 <blockquote><p>
 Oosterhout, 18 oktober 2010.<br />
 <br>&nbsp;<br><br />
