--- a/_posts/2011-03-06-aan-het-ministerie-van-landbouw.html
+++ b/_posts/2011-03-06-aan-het-ministerie-van-landbouw.html
@@ -54,4 +54,4 @@ ir. T.J. Ouwens<br />
 <sup>5</sup> <a name="note5"><a href="http://nl.wikipedia.org/wiki/Bio-industrie#Export">http://nl.wikipedia.org/wiki/Bio-industrie#Export</a><br />
 <sup>6</sup> <a name="note6"><a href="http://nl.wikipedia.org/wiki/Bio-industrie#Economie">http://nl.wikipedia.org/wiki/Bio-industrie#Economie</a><br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="571"]het Ministerie van Landbouw[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2011-04-09-van-het-ministerie-van-landbouw %}">het Ministerie van Landbouw</a></p>
