--- a/_posts/2011-04-09-van-het-ministerie-van-landbouw.html
+++ b/_posts/2011-04-09-van-het-ministerie-van-landbouw.html
@@ -24,7 +24,7 @@ comments:
   content: "Netjes van ze hoor!\r\n\r\nSamenvatting: er wordt aan gewerkt, maar de
     wielen van de politiek draaien langzaam?"
 ---
-<p>Reactie van [permalink href="546"]het Ministerie van Landbouw[/permalink]<br />
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2011-03-06-aan-het-ministerie-van-landbouw %}">het Ministerie van Landbouw</a><br />
 <br>&nbsp;<br><br />
 Datum: 6 april 2011<br />
 Betreft: Uw brief d.d. 7 maart 2011<br />
