--- a/_posts/2011-06-12-aan-het-voedingscentrum.html
+++ b/_posts/2011-06-12-aan-het-voedingscentrum.html
@@ -28,4 +28,4 @@ Geachte mevrouw, geachte heer,</p>
 Met vriendelijke groet,<br />
 ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van het [permalink href="606"]Voedingscentrum[/permalink]</p>
+Reactie van het <a href="{{ site.baseurl }}{% post_url 2011-07-04-van-het-voedingscentrum %}">Voedingscentrum</a></p>
