--- a/_posts/2011-07-04-van-het-voedingscentrum.html
+++ b/_posts/2011-07-04-van-het-voedingscentrum.html
@@ -37,7 +37,7 @@ comments:
   content: Leuke reactie, echt leuk hoe ze erop in zijn gegaan, die hebben hun eigen
     Jan daar zitten :-)!
 ---
-<p>Reactie van [permalink href="594"]het Voedingscentrum[/permalink]<br />
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2011-06-12-aan-het-voedingscentrum %}">het Voedingscentrum</a><br />
 <br>&nbsp;<br><br />
 28 juni 2011<br />
 <br>&nbsp;<br><br />
