--- a/_posts/2011-09-06-aan-intomart-gfk.html
+++ b/_posts/2011-09-06-aan-intomart-gfk.html
@@ -15,13 +15,7 @@ date_gmt: '2011-09-06 20:42:45 +0200'
 categories:
 - Brieven
 tags: []
-comments:
-- id: 210
-  author: Van Intomart GfK &laquo; Brief en leed
-  author_url: http://www.jqno.nl/briefenleed/2011/09/van-intomart-gfk/
-  date: '2011-09-10 22:14:00 +0200'
-  date_gmt: '2011-09-10 20:14:00 +0200'
-  content: "[...] Aan Intomart GfK [...]"
+comments: []
 ---
 <p>Amsterdam, 6 september 2011</p>
 <p>Geachte mevrouw, heer,</p>
@@ -37,3 +31,5 @@ comments:
 <p>Ik zie uw antwoorden met vreugde tegemoet!</p>
 <p>Met vriendelijke groet,</p>
 <p>Ralf Pisters</p>
+<br>&nbsp;<br><br />
+Reactie van <a href="{{ site.baseurl }}{% post_url 2011-09-10-van-intomart-gfk %}">Intomart GfK</a></p>
