--- a/_posts/2011-10-15-aan-eppo-stripblad.html
+++ b/_posts/2011-10-15-aan-eppo-stripblad.html
@@ -23,4 +23,4 @@ Verder wil ik nog even kwijt dat ik Eppo in general een heel fijn blad vind. Elk
 <p>Met vriendelijke groet,<br />
 Jan Ouwens, Tilburg<br />
 <br>&nbsp;<br><br>&nbsp;<br><br />
-[permalink href="655"]Geplaatst[/permalink] in Eppo Stripblad!</p>
+<a href="{{ site.baseurl }}{% post_url 2011-12-07-in-eppo-stripblad %}">Geplaatst</a> in Eppo Stripblad!</p>
