--- a/_posts/2009-07-31-aan-klene.html
+++ b/_posts/2009-07-31-aan-klene.html
@@ -28,4 +28,4 @@ comments: []
 Met vriendelijke groet,</p>
 <p>ir. T.J. Ouwens<br />
 <br>&nbsp;<br><br />
-Reactie van [permalink href="109"]Perfetti van Melle[/permalink]</p>
+Reactie van <a href="{{ site.baseurl }}{% post_url 2009-08-09-van-perfetti-van-melle %}">Perfetti van Melle</a></p>
