--- a/_posts/2010-01-20-van-quorn.html
+++ b/_posts/2010-01-20-van-quorn.html
@@ -17,7 +17,7 @@ categories:
 tags: []
 comments: []
 ---
-<p>Reactie van [permalink href="207"]Quorn[/permalink]</p>
+<p>Reactie van <a href="{{ site.baseurl }}{% post_url 2009-12-26-aan-quorn %}">Quorn</a></p>
 <blockquote><p>
 20 January 2010<br />
 <br><br />
