Fixes smart quotes

--- a/_posts/2010-03-09-aan-marco-pastors.html
+++ b/_posts/2010-03-09-aan-marco-pastors.html
@@ -48,9 +48,9 @@ comments:
 * Het verschil in de hoeveelheid stemmen voor beide kampen is in beide situaties onwaarschijnlijk klein.<br />
 * Al Gore verloor de verkiezingen, terwijl hij landelijk de meeste stemmen kreeg. Ook u dreigt de verkiezingen te verliezen, maar met de meeste voorkeurstemmen.<br />
 * In Florida was, net als in Rotterdam nu, sprake van mogelijk duizenden ongeldige stemmen. De stemmen werden herteld, iets waar ook nu op gezinspeeld wordt.<br />
-* In beide situaties ``kijkt,'' zoals u terecht opmerkt, ``de hele wereld mee.''</p>
+* In beide situaties &ldquo;kijkt,&rdquo; zoals u terecht opmerkt, &ldquo;de hele wereld mee.&rdquo;</p>
 <p>Al Gore verloor de verkiezingen, en ook voor u ziet het er niet goed uit. Maar laten we de parallel doortrekken. Gore keerde de politiek de rug toe, ging door met zijn levenswerk: aandacht vragen voor de klimaatproblematiek, schreef daar boeken over, maakte een documentaire en ontving uiteindelijk zelfs een Oscar, een Grammy en de Nobelprijs voor de vrede.</p>
-<p>Ik hoop dat deze gedachte u zal inspireren. Als u de weg volgt die Al Gore heeft ingeslagen, als u al uw aandacht richt op moeder Aarde, is succes verzekerd. Gore staat bekend als een gepassioneerd, inspirerend en overtuigend redenaar, maar u doet absoluut niet voor hem onder. Met een tekst als ``het milieubeleid van de gemeente moet gericht zijn op het beter op elkaar afstemmen van verkeerslichten'' is de eerste stap gezet. De heren in Noorwegen staan al te trappelen!</p>
+<p>Ik hoop dat deze gedachte u zal inspireren. Als u de weg volgt die Al Gore heeft ingeslagen, als u al uw aandacht richt op moeder Aarde, is succes verzekerd. Gore staat bekend als een gepassioneerd, inspirerend en overtuigend redenaar, maar u doet absoluut niet voor hem onder. Met een tekst als &ldquo;het milieubeleid van de gemeente moet gericht zijn op het beter op elkaar afstemmen van verkeerslichten&rdquo; is de eerste stap gezet. De heren in Noorwegen staan al te trappelen!</p>
 <p><br>&nbsp;<br></p>
 <p>Met vriendelijke groet,<br />
 Ralf Pisters</p>
