--- a/_posts/2011-01-16-aan-vonk.html
+++ b/_posts/2011-01-16-aan-vonk.html
@@ -34,7 +34,7 @@ comments:
 <p>Amsterdam, 16 januari 2011</p>
 <p>Geachte mevrouw, heer,</p>
 <p>Het internet is een gevaarlijke plek als het om het verwerven van kennis gaat. De schier oneindige toegang tot kosteloze informatie brengt een enorme verleiding tot plagiëren met zich mee; een verleiding waaraan velen ten prooi vallen. Maar dat u, als zichzelf serieus nemende, maatschappelijk geëngageerde organisatie zich er ook door laat meesleuren, toont aan hoe diep de intrinsieke drang tot stelen in de menselijke natuur verscholen ligt.</p>
-<p>Dit kwam aan het licht toen ik op Google zocht op de term ``platonisch idealisme''. Deze zoekterm brengt ons naar uw webpagina, waarop een verhandeling te vinden is over materialisme versus idealisme in de filosofie. Maar dat is niet het enige. De zoekterm leidt ook tot de webpagina scholieren.com, waar eveneens een dergelijke verhandeling te vinden is, en er is dan ook niet veel moeite voor nodig om te constateren dat u vrijwel het hele artikel van contribuant onderbroek88 doodeenvoudig overgeschreven heeft.</p>
+<p>Dit kwam aan het licht toen ik op Google zocht op de term &ldquo;platonisch idealisme&rdquo;. Deze zoekterm brengt ons naar uw webpagina, waarop een verhandeling te vinden is over materialisme versus idealisme in de filosofie. Maar dat is niet het enige. De zoekterm leidt ook tot de webpagina scholieren.com, waar eveneens een dergelijke verhandeling te vinden is, en er is dan ook niet veel moeite voor nodig om te constateren dat u vrijwel het hele artikel van contribuant onderbroek88 doodeenvoudig overgeschreven heeft.</p>
 <p>Iedereen verkeert weleens in tijdnood, en iedereen doet daardoor weleens dingen die eigenlijk niet zouden moeten gebeuren, maar een artikel van 2284 woorden van een scholierenwebsite plukken en -- nog erger -- vervolgens met minimale aanpassingen weer op uw eigen webpagina publiceren, dat gaat toch echt te ver. U heeft niet meer gedaan dan wat taalfoutjes verbeteren en de meest middelbareschools klinkende formuleringen vervangen door intellectueel overkomende alternatieven.</p>
 <p>Of dacht u dat dit niet zou opvallen:</p>
 <table border="1">
@@ -87,8 +87,8 @@ comments:
 <td>In Engeland nam dit de vorm aan van het empirisme, de denkrichting die ervan uitgaat dat alle kennis wordt afgeleid van de zintuigen.</td>
 </tr>
 <tr>
-<td>Newton (die van de appel!) drukte de beperkingen van het empirisme uit met zijn beroemde zin ``Ik maak geen hypothesen''.</td>
-<td>Newton drukte de beperkingen van het empirisme uit met zijn beroemde zin ``Ik maak geen hypothesen''.</td>
+<td>Newton (die van de appel!) drukte de beperkingen van het empirisme uit met zijn beroemde zin &ldquo;Ik maak geen hypothesen&rdquo;.</td>
+<td>Newton drukte de beperkingen van het empirisme uit met zijn beroemde zin &ldquo;Ik maak geen hypothesen&rdquo;.</td>
 </tr>
 <tr>
 <td>Zijn nevelhypothese over de oorsprong van het zonnestelsel (die later op een wiskundige leest werd getimmerd door Laplace) wordt nu algemeen als goed beschouwd, en dat wil op zich best wat zeggen.</td>
@@ -115,6 +115,6 @@ comments:
 <td>Toch was zijn filosofie, ondanks haar vele briljante inzichten, uiteindelijk onbevredigend.</td>
 </tr>
 </table>
-<p>Er zit hier inderdaad iets niet helemaal lekker. Onder het artikel op scholieren.com staat het uitdrukkelijk: ``Dit verslag is bedoeld als naslagwerk, niet om plagiaat mee te plegen.'' Hoe zou u het vinden als iemand ruim tweeduizend woorden van uw webpagina zou kopiëren om die vervolgens zonder eerlijke bronvermelding op zijn of haar eigen site te plaatsen? U bent hier duidelijk over de schreef gegaan. Ik hoop dan ook dat u uw vergissing inziet en het artikel van uw webpagina verwijdert. En als u enig ethisch besef heeft, biedt u onderbroek88 bovendien uw excuses aan.</p>
+<p>Er zit hier inderdaad iets niet helemaal lekker. Onder het artikel op scholieren.com staat het uitdrukkelijk: &ldquo;Dit verslag is bedoeld als naslagwerk, niet om plagiaat mee te plegen.&rdquo; Hoe zou u het vinden als iemand ruim tweeduizend woorden van uw webpagina zou kopiëren om die vervolgens zonder eerlijke bronvermelding op zijn of haar eigen site te plaatsen? U bent hier duidelijk over de schreef gegaan. Ik hoop dan ook dat u uw vergissing inziet en het artikel van uw webpagina verwijdert. En als u enig ethisch besef heeft, biedt u onderbroek88 bovendien uw excuses aan.</p>
 <p>Met vriendelijke groet,</p>
 <p>Ralf Pisters</p>
