--- a/_posts/2011-07-04-van-het-voedingscentrum.html
+++ b/_posts/2011-07-04-van-het-voedingscentrum.html
@@ -44,7 +44,7 @@ comments:
 Geachte heer Ouwens,</p>
 <p>Allereerst mijn excuus voor het feit dat de beantwoording van uw brief d.d. 12 juni 2011 wat langer op zich liet wachten.</p>
 <p>Inderdaad, een rode bes is geen watermeloen!<br />
-Als portiegrootte voor fruit hanteert het Voedingscentru, een gewicht van zo'n 100 tot 150 gram, afhankelijk van de soort. Voor een schaaltje fruit, zoals aardbeien, bessen, ananas is het 100 gram, voor een appel en een sinaasappel zonder schil 120 gram, voor een peer 120 gram en voor een schijf meloen 120 gram.</p>
+Als portiegrootte voor fruit hanteert het Voedingscentrum, een gewicht van zo'n 100 tot 150 gram, afhankelijk van de soort. Voor een schaaltje fruit, zoals aardbeien, bessen, ananas is het 100 gram, voor een appel en een sinaasappel zonder schil 120 gram, voor een peer 120 gram en voor een schijf meloen 120 gram.</p>
 <p>Een andere kwestie die u in uw brief aanroert is het verschil in indeling van groente en fruit in botanisch opzicht en in 'gebruiks' opzicht.<br />
 Over de plaats van bijvoorbeeld de tomaat in de botanische ordening is internationaal geen discussie, maar in gebruiksopzicht is er wel verschil, zoals u terecht constateert. In Nederland wordt hij vooral als groente gegeten en ook zo 'gezien' in de voedingsleer. We zijn het met u eens dat de status van courgette, rabarber en appelmoes discutabel is.<br />
 Het Voedingscentrum hanteert voor courgette en rabarber de groentestatus; appelmoes scharen wij onder fruit(producten).</p>
