--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,5 +1,5 @@
 ---
 layout: categories
-permalink: /categories/
-title: "Posts by Category"
+permalink: /categorieen/
+title: "Brieven per categorie"
 ---
