--- a/_posts/2010-08-19-van-de-ret-rotterdamse-elektrische-tram.html
+++ b/_posts/2010-08-19-van-de-ret-rotterdamse-elektrische-tram.html
@@ -13,7 +13,7 @@ wordpress_url: http://www.jqno.nl/briefenleed/?p=384
 date: '2010-08-19 18:23:55 +0200'
 date_gmt: '2010-08-19 16:23:55 +0200'
 categories:
-- Brieven
+- Reacties
 tags: []
 comments: []
 ---
