--- a/_posts/2010-10-24-van-kraft-foods-nederland-bv.html
+++ b/_posts/2010-10-24-van-kraft-foods-nederland-bv.html
@@ -13,7 +13,7 @@ wordpress_url: http://www.jqno.nl/briefenleed/?p=481
 date: '2010-10-24 15:22:58 +0200'
 date_gmt: '2010-10-24 13:22:58 +0200'
 categories:
-- Brieven
+- Reacties
 tags: []
 comments: []
 ---
