--- a/_posts/2011-09-10-van-intomart-gfk.html
+++ b/_posts/2011-09-10-van-intomart-gfk.html
@@ -13,7 +13,7 @@ wordpress_url: http://www.jqno.nl/briefenleed/?p=626
 date: '2011-09-10 22:13:54 +0200'
 date_gmt: '2011-09-10 20:13:54 +0200'
 categories:
-- Brieven
+- Reacties
 tags: []
 comments: []
 ---
